# photobooth-tauri

./: index.html  package-lock.json  package.json
.github/workflows/: publish.yml
src/: AnimatedRoutes.tsx  App.tsx  index.css
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  imaging.rs  keyboard.rs  lib.rs  mail.rs  main.rs  pricing.rs  razorpay.rs
src/Components/AdminNav/: index.tsx  styles.css
src/Components/CopiesSelectable/: index.tsx  styles.css
src/Components/Footer/: index.tsx
src/Components/Header/: index.tsx
src/Components/LayoutSelectable/: index.tsx  styles.css
src/Components/ModeSelectable/: index.tsx
src/Components/Numpad/: index.tsx
src/Contexts/: DataContext.tsx
src/Hooks/: usePayment.tsx
src/Pages/Admin/: styles.css
src/Pages/Admin/Layouts/: index.tsx  styles.css
src/Pages/Admin/Mode/: index.tsx
src/Pages/Admin/Pages/: index.tsx  styles.css
src/Pages/Admin/Pricing/: index.tsx  styles.css
src/Pages/Countdown/: index.tsx  styles.css
src/Pages/Form/Copies/: index.tsx
src/Pages/Form/Layout/: index.tsx  styles.css
src/Pages/Form/Payment/: index.tsx  styles.css
src/Pages/Form/Print/: index.tsx
src/Pages/Greeting/: index.tsx  styles.css
src/Pages/Home/: index.tsx
src/Pages/Mail/: index.tsx  styles.css
src/Pages/Mode/: index.tsx
src/Pages/Passcode/: index.tsx  styles.css
src/Services/: commands.ts  pricing.ts
src/Utils/: calculate.ts  reset.ts
