[package]
name = "app"
version = "0.2.6"
description = "A Photobooth kiosk app made with Tauri + ReactTS"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.3", features = [] }
tauri-plugin-log = "2.0.0-rc"
dotenv = "0.15.0"
chrono = "0.4.39"
reqwest = { version = "0.12.12", features = ["json"] }
image = "0.25.5"
imageproc = "0.25.0"
